src/entry/style/components/component.scss
/* 変数宣言 */
$logo-main-color:#013E6A;
$BG-modal:#ffffff;
$loading-color-thin: #daf6ff;
$loading-color-normal: rgba(10, 175, 230, 0);
$loading-text-color: #3e6d7e;
$BG-chatArea: #ffffff;
$BG-chatSubmitForm: #0aafe6;
$BG-chat-input: #ffffff;
$icon-submit-true: #0059be;
$shadow-send-message: #f0f0f0;
$BG-send-message: #2bbcff;
$BG-get-message: #cbeeff;
$BG-header: #f4fbff;
$rec-now: #eb1a1a;
$btn-blue-BG: #8AD9FB;
$btn-blue-text: #1E6D90;
$BG-white-thin: #fffffff3;
$text-main: #013E6A;
$border-gray: #ced6db;
$quiz-pink:#ED7EEB;
$quiz-blue:#4B91F0;
$quiz-yellow:#FCD15E;
$quiz-green:#56D34C;
$rank-gold: #e7c500;
$rank-silver: #AFAFAF;
$rank-copper: #D58B00;


#modelArea{
  canvas{
    width: calc(100vw*(2/7));
    height: calc(100vh*(5/7));
    border-radius: 10px;
  }
}

/* 戻るボタン */
.back2topBtn{
  width: fit-content;
  position: absolute;
  margin: 2rem;
}

/* ボタン（青・白） */
.btnBase{
  color: $btn-blue-text;
  font-weight: bold;
  padding: 0.7rem 1.2rem;
  border-radius: 10px;
  border: 1px solid $btn-blue-text;
}
.blueBtn{
  background-color: $btn-blue-BG;
}
.whiteBtn{
  background-color: #ffffff;
}

/* input type="text" 白 */
.whiteInputText{
  width: 10rem;
  border: 1px solid $logo-main-color;
  border-radius: 5px;
  padding: 0.3rem 0.8rem;
}

/* model & dialog */
.modelAndDialogue{
  width: unset;
  margin: unset;
  position: relative;
  .modelMessage{
    width: fit-content;
    max-width: 90%;
    position: absolute;
    top: 80%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    background-color: $BG-white-thin;
    padding: 1.5rem 2rem;
    border-radius: 10px;
    color: $text-main;
    font-size: 1.1rem;
  }
}

/* 吹き出し（青・白） */
.speechBalloonBase{
  width: fit-content;
  max-width: 15rem;
  display: inline-block;
  position: relative;
  border-radius: 15px;
  margin-left: 15px;
  padding: 0.7rem 1rem;
  color: $text-main;
  &::before{
    content: "";
    position: absolute;
    top: 70%;
    margin-top: -15px;
    border: 10px solid transparent;
  }
}
.sendMessageComponent{
  background: $BG-send-message;
  margin: 0 0 0 auto;
  &::before{
    left: 95%;
    border-left: 25px solid $BG-send-message;
  }
}
.getMessageComponent{
  background: $BG-get-message;
  &::before{
    left: -30px;
    border-right: 25px solid $BG-get-message;
  }
}
.chatLogComponent{
  width: fit-content;
  margin: 0;
  padding: 0;
}
.chatSubmitAreaComponent{
  width: fit-content;
  max-width: fit-content;
  display: flex;
  background-color: #ffffff;
  border-radius: 5rem;
  padding: 0.5rem 1.3rem;
  margin: 0.8rem auto 0;
  gap: 1rem;
  button{
    color: $logo-main-color;
  }
}

/* chat notification */
.chatNotificationComponent{
  width: fit-content;
  background: #ffffff;
  opacity: 0.7;
  font-size: 0.9rem;
  border-radius: 25px;
  padding: 0.3rem 1.5rem;
  margin: 0 auto;
}

/* star icon */
.star{
  color: $quiz-yellow;
}

/* Twitter Share Btn (円) */
.TwitterShareBtnCircle{
  width:  35px;
  height: 35px;
  border-radius: 5px;
}

/* mobileここから */
@media screen and (max-width: 950px) {
  #modelArea{
    canvas{
      width: calc(100vw*(5/7));
      height: calc(100vh*(3/5));
    }
  }
  .modelAndDialogue{
    width: fit-content;
    margin: 1rem auto 0;
    .modelMessage{
      display: none;
    }
  }
}
/* mobileここまで */

